@@ -1,1 +1,1 @@
-90e9f374e7547dcdc7db12dcb1204292 *addons.xml
+312c5033f8a05d5e4c2d1f20b2ba805a *addons.xml
